<resources>
    <string name="app_name">Podomoro</string>
    <string name="title_activity_tash">TashActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="work_time">Work time:</string>
    <string name="break_time">Break time :</string>
    <string name="long_break">Long break:</string>
    <string name="long_break_after">Long break after</string>
    <string name="reset">Reset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="text_input_name">Name of new task</string>
    <string name="payment_per_secs">Payment per hour</string>
    <string name="done">Task had done</string>
    <string name="saved">Saved</string>
    <string name="tasks">Tasks</string>
    <string name="edit_task">Edit task</string>
    <string name="del_this_task">Delete this task !</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_new_task">Add new task</string>
    <string name="loading">loading...</string>
</resources>
