<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="16dp"
    tools:context="com.example.quyet.podomoro.activities.LoginActivity">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputPassword"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:textSize="16sp"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout

        android:id="@+id/textInputUsername"
        android:layout_above="@id/textInputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_username"
            android:hint="@string/username"
            android:textSize="16sp"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <View
        android:id="@+id/tempView"
        android:layout_width="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textInputPassword"
        android:layout_height="0dp"/>

    <Button
        android:layout_below="@id/textInputPassword"
        android:id="@+id/bt_register"
        android:text="@string/register"
        android:textSize="14sp"
        android:layout_toLeftOf="@id/tempView"
        android:layout_marginTop="@dimen/bt_margin_top"
        android:layout_marginBottom="@dimen/bt_margin_bottom"
        android:layout_marginLeft="@dimen/bt_margin_left"
        android:layout_marginRight="@dimen/bt_margin_left"
        android:background="@color/colorTransparent"
        android:textColor="@color/colorAccent"
        android:layout_width="@dimen/btWidth"
        android:layout_height="@dimen/btHeight" />
    <Button

        android:id="@+id/bt_login"
        android:text="@string/login"
        android:textSize="14sp"
        android:layout_toRightOf="@id/tempView"
        android:layout_below="@id/textInputPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/bt_margin_top"
        android:layout_marginBottom="@dimen/bt_margin_bottom"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="@dimen/bt_margin_left"
        android:layout_marginRight="@dimen/bt_margin_left"
        android:background="@drawable/shape_button"
        android:layout_width="@dimen/btWidth"
        android:layout_height="@dimen/btHeight" />
    <ImageView
        android:id="@+id/iv_techkid"
        app:srcCompat="@drawable/ic_techkidslogo"
        android:layout_above="@id/textInputUsername"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:scaleType="fitCenter"
        android:layout_marginBottom="8dp" />

</RelativeLayout>
